# caixaaberta

./: .env.sample  .gitignore  .pre-commit-config copy.yaml  .pre-commit-config.yaml  Pipfile  README.md  TODO.md  cache.sqlite  caixa_imoveis_pipeline.duckdb  etl.py  exemplo_imoveis.csv  geocoding_utils.py  imoveis_BR.csv  imoveis_caixa.sql  processador_caixa.py  psa.py  pyproject.toml  reporter.py  requirements-dev-all.txt  requirements-dev.txt  requirements.txt  test.py  test_etl.py  test_processador_caixa.py  test_psa.py  update.py
.github/workflows/: actions.yaml  ci.yml  codeql-analysis.yml  main.yml  python-tests.yml
data/: imoveis_AC.csv  imoveis_AL.csv  imoveis_AM.csv  imoveis_AP.csv  imoveis_BA.csv  imoveis_CE.csv  imoveis_DF.csv  imoveis_ES.csv  imoveis_GO.csv  imoveis_MA.csv  imoveis_MG.csv  imoveis_MS.csv  imoveis_MT.csv  imoveis_PA.csv  imoveis_PB.csv  imoveis_PE.csv  imoveis_PI.csv  imoveis_PR.csv  imoveis_RJ.csv  imoveis_RN.csv  imoveis_RO.csv  imoveis_RR.csv  imoveis_RS.csv  imoveis_SC.csv  imoveis_SE.csv  imoveis_SP.csv  imoveis_TO.csv
dbt_real_estate/: .user.yml  dbt_project.yml  profiles.yml
dbt_real_estate/models/marts/: imoveis_geocoded.py
dbt_real_estate/models/staging/: stg_imoveis.sql
dbt_real_estate/seeds/: imoveis_AL.csv  imoveis_CE.csv  imoveis_ES.csv  imoveis_GO.csv  imoveis_MA.csv  imoveis_MS.csv  imoveis_PA.csv  imoveis_RO.csv  imoveis_RR.csv  schema.yml
src/: fetch_data.py  generate_ddl.py  geocoding_utils.py  pipeline.py  processador_caixa.py  reporter.py  run_dbt_pipeline.py  run_pipeline.py  upload_to_archive.py  utils.py
src/caixaaberta/: __init__.py  cache.py  geocoding_utils.py  pipeline.py  processador_caixa.py
tests/: test_fetch_data.py  test_geocoding_utils.py  test_psa.py  test_reporter.py  test_smoke.py  test_upload_to_archive.py
