[tool.poetry]
name = "caixaaberta"
version = "0.1.0"
description = ""
authors = ["Franklin Silveira Baldo <franklinbaldo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
lxml = "^4.9.1"
requests = "^2.32.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.2"
black = "^24.3"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
zimports = "^0.4.1"

