[project]
name = "caixaaberta"
version = "0.0.0"
description = "ETL de imóveis da Caixa Econômica"
requires-python = ">=3.11"
dependencies = [
  "pandas==1.5.3",
  "requests==2.32.4",
  "lxml==4.9.4",
  "python-dotenv==1.0.1",
  "geopy==2.3.0", # Changed version
  "pytest", # Added for running tests
  "numpy>=1.21,<2.0" # Pin NumPy to 1.x for pandas 1.5.3 compatibility
]
